--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,8 +3,8 @@
     <div class="col-md-8 text-center ip">
         <form class="create-form">
             <div class="form-group">
-                <h4 class="card-title ttl-color"><label for="burgerName">Enter Burger Name: </label></h4>
-                <input type="text" id="name" name="burgerName">
+                <h4 class="card-title ttl-color"><label for="burgerName">Eat-Da-Burger! </label></h4>
+                <input type="text" id="name" name="burgerName" placeholder="Enter Burger Name...">
             </div>
             <button type="submit" class="btn add">Add a Burger</button>
         </form>
