--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
             <button type="submit" class="btn add">Add a Burger</button>
         </form>
     </div>
-    {{!-- <div class="col-md-2"></div> --}}
+    <div class="col-md-2"></div>
 </div>
 <div class="image">
     <img src="https://media3.giphy.com/media/7NXp5l8D4oRsm0XxiK/giphy.gif" />
